--- a/package.json
+++ b/package.json
@@ -107,14 +107,19 @@
         "wnumb": "^1.2.0"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.3.1",
+        "@tailwindcss/typography": "^0.4.0",
+        "alpinejs": "^3.0.6",
         "axios": "^0.19",
         "cross-env": "^7.0.3",
         "laravel-mix": "^5.0.9",
         "lodash": "^4.17.20",
+        "postcss-import": "^14.0.1",
         "replace-in-file-webpack-plugin": "^1.0.6",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.6",
         "sass-loader": "^8.0.2",
+        "tailwindcss": "^2.2.2",
         "vue-template-compiler": "^2.6.12"
     }
 }
